# pufferfish

./: .gitignore  CMakeLists.txt  LICENSE  README.md
docs/: algorithm.md  archive_format.md  code_explanation.md  explanation.md  explanation_en.md
include/: archive.hpp  huffman.hpp  statistics.hpp
samples/: HarryPotter-andthe-SorcerersStone.puff  sample.puff  sample.txt
src/: archive.cpp  huffman.cpp  main.cpp  statistics.cpp
